-
Bug
-
Resolution: Done
-
Not Evaluated
-
Some future release
-
None
-
2e110daa8fb388
If you assign an id in qml using quotes (i.e. id: "myName") it also sets the objectName property. Since ids are not supposed to be in quotes (which possibly is the real bug here) and id is not supposed to be the same as objectName (because they behave differently) this is confusing.
- relates to
-
QTBUG-70936 Support reading id property
-
- Closed
-