Remove id property from QGraphicsObject

It is not actually useful (exact same READ/WRITE as objectName) and is
confusing when used in QML.

Task-number: QTBUG-6580
Reviewed-by: andreas
Reviewed-by: alexis
Reviewed-by: ogoffart